fix: responsive issue on mobile screen

--- a/frontend/src/app/auth/signup/page.module.css
+++ b/frontend/src/app/auth/signup/page.module.css
@@ -1,6 +1,5 @@
 .container {
   max-width: 700px;
-  min-width: 400px;
   width: 60%;
   padding: 0px 64px 64px;
   margin: 0 auto 10px;
@@ -53,6 +52,7 @@
 @media screen and (max-width: 420px) {
   .container {
     width: 100%;
+    border-radius: 0px;
   }
 }
 
